# torchtitan

./: .gitmodules  .ripgreprc  debug_run.sh  get_nvcc13.sh  notes.md  pyproject.toml
cute_dsl/: cutlass_logging.py
experiments/: test_ep_sharding.py  test_parallel_dims.py  test_training.py  testing_utils.py
experiments/ao_tests/: run_fsdp.sh  run_fsdp_ep.sh  test_fsdp.py  test_fsdp_ep.py
experiments/dtensor_tests/: async_tp.py  tensor_subclass.py  test_comm_debug.py  test_custom_sharding.py  test_fake_collectives.py  test_fake_dist.py  test_fake_pg.py  test_local_map.py  test_micro_pipeline.py  test_symmetric.py
nvshmem_src/: hello_world_torch.py  torch_example.py
scripts/estimate/: estimation.py
symmetric_mem/: check_dispatch.py  test_a2a_shmem.py  test_symm.py
tests/qwen3_moe/: conftest.py  test_qwen3_moe_attn.py  test_qwen3_moe_mlp.py  test_qwen3_moe_model.py
torchtitan/: config_manager.py  debug_train.py  train.py
torchtitan/distributed/: parallel_dims.py  utils.py
torchtitan/experiments/llama4/: __init__.py
torchtitan/experiments/qwen3_moe/: __init__.py  optimizer.py
torchtitan/experiments/qwen3_moe/conversion/: convert_from_hf.py
torchtitan/experiments/qwen3_moe/infra/: expert_parallel.py  parallelisms.py  parallelize.py
torchtitan/experiments/qwen3_moe/model/: __init__.py  args.py  attention.py  configuration.py  model.py  moe.py
torchtitan/experiments/qwen3_moe/train_configs/: debug.toml
torchtitan/models/: __init__.py
torchtitan/models/llama3/: __init__.py
torchtitan/models/llama3/train_configs/: llama3_8b.toml
torchtitan/testing/: utils.py
torchtitan/tools/: initialization.py  logging.py  utils.py
